lineview modal, button align fixed

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -488,3 +488,8 @@ input[type="text"]:focus
     -webkit-appearance:none;
     box-shadow: none !important;
 }
+
+.padding_bottom_ten_pixel {
+    padding-bottom: 10px!important;
+}
+
